--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,13 +49,13 @@ body{margin-top: 80px !important;overflow: auto !important;height: 100% !importa
 .scrollLeft{position: absolute;bottom: -49px;left: 0;width: 2226px;height: 344px;}
 
 .valorantBar{position: fixed;top: 80px;right: 0;display: block;width: 80px;height: 100%;background-image: url(../images/img_rightBar.png);background-position: center top;background-size: cover;background-repeat: no-repeat;z-index: 99;}
-#btnMenuOpen {position: absolute;left: 63px;top: 56px;width: 80px;height: 80px;background: rgba(255, 255, 255, 0.1);border: 1px solid #ECE8E1;backdrop-filter: blur(3px);box-sizing: border-box;transform: translateX(0);-webkit-transform: translateX(0);transition-duration: 0.5s;-webkit-transition-duration: 0.5s;z-index: 9;}
+#btnMenuOpen {position: absolute;left: 63px;top: 56px;width: 80px;height: 80px;background: rgba(255, 255, 255, 0.1);border: 1px solid #ECE8E1;backdrop-filter: blur(3px);-webkit-backdrop-filter: blur(3px);box-sizing: border-box;transform: translateX(0);-webkit-transform: translateX(0);transition-duration: 0.5s;-webkit-transition-duration: 0.5s;z-index: 9;}
 #btnMenuOpen:before {content: "";position: absolute;left: 17px;top: 23px;display: block;width: 44px;height: 3px;background-color: #ECE8E1;}
 #btnMenuOpen span {display: block;width: 100%;height: 100%;overflow: hidden;text-indent: -9999px;white-space: nowrap;}
 #btnMenuOpen span:before {content: "";position: absolute;left: 17px;top: 38px;display: block;width: 44px;height: 3px;background-color: #ECE8E1;}
 #btnMenuOpen span:after {content: "";position: absolute;left: 17px;top: 53px;display: block;width: 44px;height: 3px;background-color: #ECE8E1;}
 #btnMenuOpen.open{transform: translateX(-200px);-webkit-transform: translateX(-200px);transition-duration: 0.5s;-webkit-transition-duration: 0.5s;}
-#leftmenu{position: absolute;top: 56px;left: 63px;padding: 100px 30px 40px;background: rgba(255, 255, 255, 0.1);border: 1px solid #ECE8E1;backdrop-filter: blur(15px);width: 375px;min-height: 500px;box-sizing: border-box;z-index: 999;transform: translateX(-600px);-webkit-transform: translateX(-600px);transition-duration: 0.8s;-webkit-transition-duration: 0.8s;-webkit-overflow-scrolling: touch;opacity: 1;}
+#leftmenu{position: absolute;top: 56px;left: 63px;padding: 100px 30px 40px;background: rgba(255, 255, 255, 0.1);border: 1px solid #ECE8E1;backdrop-filter: blur(15px);-webkit-backdrop-filter: blur(15px);width: 375px;min-height: 500px;box-sizing: border-box;z-index: 999;transform: translateX(-600px);-webkit-transform: translateX(-600px);transition-duration: 0.8s;-webkit-transition-duration: 0.8s;-webkit-overflow-scrolling: touch;opacity: 1;}
 #leftmenu h4{margin-bottom: 25px;font-size: 24px;color: #ECE8E1;font-weight: 600;line-height: 100%;letter-spacing: 0.1em;}
 #leftmenu .bannerGroup{margin-bottom: 80px;}
 #leftmenu .bannerGroup li + li{margin-top: 20px;}
@@ -80,6 +80,7 @@ body{margin-top: 80px !important;overflow: auto !important;height: 100% !importa
 .visualSection .visualInner:after{content: "";position: absolute;top: 0;right: 0;display: block;height: 100%;border-right: 1px solid rgba(236, 232, 225, 0.5);}
 .visualSection .visualInner .visualText{margin-bottom: 60px;}
 .visualSection .visualInner .visualText .textValorant{text-align: center;}
+.visualSection .visualInner .visualText .textValorant img{margin: 0 auto;}
 .visualSection .visualInner .visualText p{position: relative;margin-top: 20px;font-size: 24px;color: #ECE8E1;font-weight: 600;line-height: 110%;word-break: keep-all;text-align: center;letter-spacing: 0.1em;}
 
 .reservationSection{position: relative;overflow: hidden;background-color: #0F1923;background-image: url(../images/bg_dot.png);background-position: center 166px;background-repeat: no-repeat;}
@@ -129,7 +130,7 @@ body{margin-top: 80px !important;overflow: auto !important;height: 100% !importa
 
 .BgSlideImg{position: absolute;top: 0;bottom: 0;left: 0;right: 0;width: 100%;height: 100%;overflow: hidden;}
 .BgSlideImg p{position: relative;height: 100%;transition: .3s;-webkit-transition: .3s;}
-.BgSlideImg p:before{content: "";position: absolute;width: 100%;height: 100%; background: rgba(0, 0, 0, 0.6);backdrop-filter: blur(2.5px);transition: .3s;-webkit-transition: .3s;}
+.BgSlideImg p:before{content: "";position: absolute;width: 100%;height: 100%; background: rgba(0, 0, 0, 0.6);backdrop-filter: blur(2.5px);-webkit-backdrop-filter: blur(2.5px);transition: .3s;-webkit-transition: .3s;}
 .BgSlideImg p img, .BgSlideImg p video{-o-object-fit: cover;object-fit: cover;-o-object-position: center;object-position: center;-o-object-position: center;object-position: center;width: 100%;height: 100%;transition: .3s;-webkit-transition: .3s;}
 
 .updateTextSlide{position: absolute;left: calc(50% - 600px);min-width: auto;width: 360px;box-sizing: border-box;}
@@ -141,7 +142,7 @@ body{margin-top: 80px !important;overflow: auto !important;height: 100% !importa
 .updateThumbSlide{margin-left: calc(50% - 160px);box-sizing: border-box;z-index: 10;}
 .updateThumbSlide .slick-slide{margin: 0 15px;line-height: 0;}
 .updateThumbSlide .Thumb{position: relative;width: 800px;height: 450px;overflow: hidden;box-sizing: border-box;transition: .3s;-webkit-transition: .3s;}
-.updateThumbSlide .Thumb:before{content: "";position: absolute;width: 100%;height: 100%;background: rgba(0, 0, 0, 0.7);backdrop-filter: blur(5px);transition: .3s;-webkit-transition: .3s;opacity: 1;}
+.updateThumbSlide .Thumb:before{content: "";position: absolute;width: 100%;height: 100%;background: rgba(0, 0, 0, 0.7);backdrop-filter: blur(5px);-webkit-backdrop-filter: blur(5px);transition: .3s;-webkit-transition: .3s;opacity: 1;}
 .updateThumbSlide .Thumb:after{content: "";position: absolute;top: 0;left: 0;width: calc(100% - 2px);height: calc(100% - 2px);border: 1px solid #ECE8E1;transition: .3s;-webkit-transition: .3s;opacity: 0;}
 .updateThumbSlide .slick-current .Thumb:before{opacity: 0;}
 .updateThumbSlide .slick-current .Thumb:after{opacity: 1;}
@@ -149,7 +150,7 @@ body{margin-top: 80px !important;overflow: auto !important;height: 100% !importa
 .updateThumbSlide .Thumb video{width: 100%;height: 100%;object-fit: cover;}
 
 .updateArrow{position: absolute;left: calc(50% - 660px);bottom: 197px;font-size: 0;z-index: 10;}
-.updateArrow button{width: 80px;height: 80px;background-color: rgba(236, 232, 225, 0.1);background-image: url(../images/icon_update_arrow.svg);background-position: center center;background-repeat: no-repeat;backdrop-filter: blur(3px);border: 1px solid #ECE8E1;overflow: hidden;text-indent: -9999px;white-space: nowrap;}
+.updateArrow button{width: 80px;height: 80px;background-color: rgba(236, 232, 225, 0.1);background-image: url(../images/icon_update_arrow.svg);background-position: center center;background-repeat: no-repeat;backdrop-filter: blur(3px);-webkit-backdrop-filter: blur(3px);border: 1px solid #ECE8E1;overflow: hidden;text-indent: -9999px;white-space: nowrap;}
 .updateArrow .next{transform: rotate(180deg);margin-left: 10px;}
 .updateArrow button.slick-disabled{opacity: 0.5; cursor: inherit;}
 
